Starter code of goo2
1. Reference code now uses static library
2. Formatted with clang-format
3. Add a new interface.
4. replace bin/referece with a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "third-party/tetgen"]
 	path = third-party/tetgen
 	url = https://github.com/jdumas/tetgen
+[submodule "bin/reference"]
+	path = bin/reference
+	url = git@github.com:xinyazhang/psim_reference.git
